# idea-sparker

./: .gitignore  GLM.md  GOOGLE_STYLE_OPTIMIZATION.md  README.md  go.mod  package-lock.json  package.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .golangci.yml  BACKEND_STATUS.md  README.md  go.mod
backend/scripts/run_tests/: main.go
backend/scripts/test_api/: main.go
backend/scripts/validate_clean/: main.go
backend/src/: main.go
backend/src/api/: draft_handlers.go  resource_handlers.go
backend/src/models/: chat.go  draft.go  idea.go  resource.go
backend/src/services/: draft_service.go  resource_service.go
backend/src/storage/: interface.go  memory.go
backend/tests/contract/: test_drafts_get.go  test_drafts_post.go  test_ideas_post.go  test_resources_get.go  test_resources_post.go
backend/tests/integration/: api_test.go  server_test.go
backend/tests/unit/: draft_service_test.go
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: DraftManager.tsx  IdeaGenerator.tsx  MarkdownEditor.tsx  ResourceCollector.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: apiService.ts  tauriService.ts
frontend/tests/integration/: test_ai_chat.js  test_markdown_editor.js  test_resource_collection.js
specs/001-build-an-application/: plan.md  spec.md  tasks.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
(+9 files in other folders)
