[package]
name = "inspiration-blog-writer"
version = "0.1.0"
description = "A powerful desktop application for writing inspiration-based blog posts with AI assistance"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-exists", "shell-open", "notification-all", "window-minimize", "window-maximize", "window-close", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
